--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,6 +1,6 @@
 $font-family_default: 'Noto Sans', Arial, sans-serif;
 $font-family_title: $font-family_default;
-$font-size_default: 14px;
+$font-size_default: 0.875rem;
 
 $line-height_default: 1;
 $line-height_content: 1.4;
