--- a/src/scss/tpl/_dropdown.scss
+++ b/src/scss/tpl/_dropdown.scss
@@ -1,89 +1,89 @@
 .dropdown {
-    @extend %zi-1;
+  @extend %zi-1;
 
-    &.show {
-        z-index: 2;
-    }
+  &.show {
+    z-index: 2;
+  }
 }
 
 .dropdown-toggle {
-    @extend .fs-dropdown-selected;
-    color: $color__text_default;
+  @extend .fs-dropdown-selected;
+  color: $color__text_default;
 
-    &[disabled] {
-        opacity: 0.5;
-    }
+  &[disabled] {
+    opacity: 0.5;
+  }
 }
 
 .dropdown-menu {
-    display: none;
-    overflow: hidden;
-    padding: 12px 16px;
-    border-radius: 4px;
-    background: #fff;
-    box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, 0.16);
+  display: none;
+  overflow: hidden;
+  padding: 12px 16px;
+  border-radius: 4px;
+  background: #fff;
+  box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, 0.16);
 
-    &.show {
-        right: 0;
-        display: block;
-    }
+  &.show {
+    right: 0;
+    display: block;
+  }
 
-    &[x-placement="bottom-start"] {
-        transform: none !important;
-    }
+  &[x-placement="bottom-start"] {
+    transform: none !important;
+  }
 
-    &[x-placement="top-start"] {
-        top: auto !important;
-    }
+  &[x-placement="top-start"] {
+    top: auto !important;
+  }
 }
 
 .dropdown-menu__header {
-    margin: 0 0 8px;
+  margin: 0 0 8px;
 }
 
 .dropdown__field {
-    @include size(100%,25px);
-    @include fs-lh(12px,1);
-    border: 0;
-    padding: 2px 6px;
-    border-radius: 8px;
-    background: $color__light;
+  @include h6;
+  @include wh(100%,25px);
+  border: 0;
+  padding: 2px 6px;
+  border-radius: 8px;
+  background: $color__light;
 }
 
 .dropdown-menu__body {
 }
 
 .dropdown-menu__list {
-    @extend %list-default;
-    height: 100%;
-    max-height: 184px;
-    margin: 0 -16px;
-    overflow: auto;
+  @extend %list-default;
+  height: 100%;
+  max-height: 184px;
+  margin: 0 -16px;
+  overflow: auto;
 
-    @include media-breakpoint-up(md) {
-        margin-right: -33px;
-    }
+  @include media-breakpoint-up(md) {
+    margin-right: -33px;
+  }
 }
 
 .dropdown-menu__list-item {
 }
 
 .dropdown-menu__list-option {
-    @extend .fs-dropdown-item;
-    border-radius: 0 !important;
-    background-color: rgba(0,0,0,0);
+  @extend .fs-dropdown-item;
+  border-radius: 0 !important;
+  background-color: rgba(0,0,0,0);
+
+  &:hover,
+  &:focus {
+    color: $color__brand;
+  }
+
+  &.selected {
+    @extend .fs-dropdown-item.fs-dropdown-item_selected;
 
     &:hover,
     &:focus {
-        color: $color__brand;
+      color: #fff;
     }
-
-    &.selected {
-        @extend .fs-dropdown-item.fs-dropdown-item_selected;
-
-        &:hover,
-        &:focus {
-            color: #fff;
-        }
-    }
+  }
 }
