--- a/src/scss/tpl/_feature.scss
+++ b/src/scss/tpl/_feature.scss
@@ -1,23 +1,23 @@
 .feature {
-    @include media-breakpoint-up(lg) {
-        margin: 0 0 24px;
-    }
+  @include media-breakpoint-up(lg) {
+    margin: 0 0 24px;
+  }
 
-    @include media-breakpoint-down(md) {
-        margin: 0 0 40px;
-    }
+  @include media-breakpoint-down(md) {
+    margin: 0 0 40px;
+  }
 }
 
 .feature__value {
-    @include fs-lh(48px,52px);
-    font-weight: bold;
-    color: $color__brand;
+  @include fs-lh(3rem,3.25rem);
+  font-weight: bold;
+  color: $color__brand;
 
-    .text-sm {
-        @include fs-lh(36px,40px);
-    }
+  .text-sm {
+    @include h1;
+  }
 }
 
 .feature__title {
-    @include fs-lh(16px,18px);
+  @include h4;
 }
