--- a/src/scss/tpl/_form.scss
+++ b/src/scss/tpl/_form.scss
@@ -78,7 +78,7 @@
 
     &.form__section_content {
         p {
-            @extend %h6;
+            @include h6;
             margin: 0 0 4px;
         }
 
@@ -87,7 +87,7 @@
         }
 
         li {
-            @extend %h6;
+            @include h6;
         }
     }
 
@@ -103,26 +103,26 @@
 }
 
 .form__section-title {
-    @extend %h6;
+    @include h6;
     color: $color__disabled;
     margin: 0 0 24px;
 }
 
 .form__label {
-    @extend %h5;
+    @include h5;
     margin-bottom: 0;
     cursor: pointer;
     user-select: none;
     transition: all .3s ease;
 
     &.form__label_title {
-        @include fs-lh(12px,18px);
+        @include fs-lh(0.75rem,1.125rem);
         pointer-events: none;
 
         @include media-breakpoint-up(md) {
             @include pos(4px,8px);
         }
-    
+
         @include media-breakpoint-down(sm) {
             @include pos(6px,8px);
         }
@@ -130,7 +130,7 @@
 
     &.form__label_plain {
         @include pos(-18px,8px);
-        @include fs-lh(12px,18px);
+        @include fs-lh(0.75rem,1.125rem);
         color: $color__disabled;
         cursor: default;
     }
@@ -170,7 +170,7 @@
             }
 
             .form__label-title {
-                @include fs-lh(12px,16px);
+                @include fs-lh(0.75rem,1rem);
             }
         }
 
@@ -192,7 +192,7 @@
             @extend %toggler-theme;
 
             &.form__label_lg {
-                @include fs-lh(16px,22px);
+                @include fs-lh(1rem,1.375rem);
                 @include offset(0 8px 8px 0,8px 24px);
                 border-radius: 8px;
                 text-transform: uppercase;
@@ -226,7 +226,7 @@
             @include media-breakpoint-up(md) {
                 top: 5px;
             }
-        
+
             @include media-breakpoint-down(sm) {
                 top: 7px;
             }
@@ -241,7 +241,7 @@
 }
 
 .form__divider {
-    @include fs-lh(12px,16px);
+    @include fs-lh(0.75rem,1rem);
 }
 
 .form__row {
@@ -264,17 +264,17 @@
 }
 
 .form__title {
-    @extend %h4;
+    @include h4;
     margin: 0 0 18px;
 
     &.form__title_colored {
-        @extend %h3;
+        @include h3;
         font-weight: bold;
         color: $color__brand;
     }
 
     &.form__title_icon {
-        @extend %h3;
+        @include h3;
         @extend %flex-item;
         font-weight: bold;
         color: $color__brand;
@@ -293,7 +293,7 @@
 }
 
 .form__select-title {
-    @extend %h6;
+    @include h6;
     @include pos(-16px,14px);
 }
 
@@ -319,7 +319,7 @@
     &.form__item_icon {
         .form__field {
             padding-right: 30px;
-        }  
+        }
     }
 
     &.active {
@@ -329,7 +329,7 @@
             @include media-breakpoint-up(md) {
                 transform: translateY(-22px);
             }
-        
+
             @include media-breakpoint-down(sm) {
                 transform: translateY(-24px);
             }
@@ -347,11 +347,11 @@
     box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.16) inset;
 
     @include media-breakpoint-up(md) {
-        @include fs-lh(12px,18px);
+        @include fs-lh(0.75rem,1.125rem);
     }
 
     @include media-breakpoint-down(sm) {
-        @include fs-lh(16px,18px);
+      @include h4;
     }
 
     &.form__field_textarea {
@@ -366,7 +366,7 @@
 }
 
 .form__footer {
-    @extend %h6;
+    @include h6;
 
     &.form__footer_px {
         @include media-breakpoint-up(sm) {
