--- a/src/scss/tpl/_topmenu.scss
+++ b/src/scss/tpl/_topmenu.scss
@@ -1,23 +1,23 @@
 .topmenu__wrapper {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .topmenu__item {
-    @include inline-block;
-    @include fs-lh(16px,22px);
-    user-select: none;
-    transition: all .3s ease;
+  @include inline-block;
+  @include fs-lh(1rem,1.375rem);
+  user-select: none;
+  transition: all .3s ease;
 
-    &:hover,
-    &.current {
-        color: $color__brand;
-    }
+  &:hover,
+  &.current {
+    color: $color__brand;
+  }
 
-    &.current {
-        font-weight: bold;
-    }
+  &.current {
+    font-weight: bold;
+  }
 
-    @include media-breakpoint-down(md) {
-        margin: 0 24px 0 0;
-    }
+  @include media-breakpoint-down(md) {
+    margin: 0 24px 0 0;
+  }
 }
