--- a/src/pug/comparing.pug
+++ b/src/pug/comparing.pug
@@ -4,7 +4,7 @@ block meta
   - var title = 'Страница сравнения';
 
 block wrapper
-  .container.container_wrapper
+  .wrapper
     nav.pathway
       a.pathway__link(href="#") Главная
       a.pathway__current(href="#") Сравнить
