--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -4,7 +4,7 @@ block meta
   - var title = 'Главная';
 
 block wrapper
-    .container.container_wrapper
+    .wrapper
         .tabs
             ul.tabs__nav.nav.nav-tabs(role="tablist")
                 li.tabs__nav-item.nav-item
@@ -507,7 +507,7 @@ block wrapper
                         .row.flex-grow-1
                             .col-xl-6.col-lg-8.col-md-6.d-flex.flex-column.justify-content-around.h-100
                                 .feature
-                                    .feature__value 10 
+                                    .feature__value 10
                                         span.text-sm лет
                                     .feature__title на рынке продаж шин дисков и автотоваров.
                                 .feature
