--- a/src/pug/results.pug
+++ b/src/pug/results.pug
@@ -14,7 +14,7 @@ block filter
         | фильтр
 
 block wrapper
-  .container.container_wrapper
+  .wrapper
     nav.pathway
       a.pathway__link(href="#") Главная
       a.pathway__link(href="#") Шины
