--- a/src/pug/service.pug
+++ b/src/pug/service.pug
@@ -8,7 +8,7 @@ block wrapper
     .section__picture.section__picture_top.text-right.zi-1
       img.img-cover.d-none.d-lg-block(src="../img/content/services/services-top-1.jpg" alt="")
       img.img-cover.d-block.d-lg-none(src="../img/content/services/services-top-1-mobile.jpg" alt="")
-    .container.container_wrapper.container_column.zi-2
+    .wrapper.container_column.zi-2
       .section__body.section__body_unstyled
         nav.pathway
           a.pathway__link(href="#") Главная
@@ -22,7 +22,7 @@ block wrapper
       .section__footer.p-0
         button.btn(type="button") Записаться онлайн
 
-  .container.container_wrapper
+  .wrapper
     .section
       .section__wrapper.section__wrapper_px.mx-0
         .section__title.text-center Почему лучше обращаться к профессионалам?
@@ -124,7 +124,7 @@ block wrapper
                   .review__title Анатолий Ефимов
                   .review__date 10 дек в 11:37
               .review__content Был 10 декабря, отличный сервис. Сам ещё приеду и всем друзьям посоветую. Мастеру большой репект! Мне очень понравилось, советую ВСЕМ!!!
-  .container.container_wrapper
+  .wrapper
     .section.mb-3
       .section__title Как мы работаем
   .section
@@ -149,7 +149,7 @@ block wrapper
     .text-center
       a.readmore(href="#") Больше фото
 
-  .container.container_wrapper
+  .wrapper
     include base/callorder.pug
 
     .section
