--- a/src/pug/articles.pug
+++ b/src/pug/articles.pug
@@ -4,7 +4,7 @@ block meta
   - var title = 'Статьи';
 
 block wrapper
-  .container.container_wrapper
+  .wrapper
     nav.pathway
       a.pathway__link(href="#") Главная
       a.pathway__link(href="#") Шины
