--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -20,7 +20,7 @@ html(lang="ru")
         .icons
         header.header
             .header__top
-                .container.container_wrapper.d-flex.flex-wrap.align-items-center.px-sm-0
+                .wrapper.d-flex.flex-wrap.align-items-center
                     .col-xl-6.col-lg-12.col-8.d-flex.align-items-center.justify-content-xl-start.justify-content-lg-between.mb-xl-0.mb-lg-2
                         .contacts.col-xl-7.col-lg-5.w-auto.px-0
                             .contacts__item.contacts__item_notitle
@@ -123,7 +123,7 @@ html(lang="ru")
 
     block footer
         footer.footer
-            .container.container_wrapper.d-flex.flex-wrap.px-0
+            .wrapper.d-flex.flex-wrap
                 .col-lg-2.col-md-3
                     nav.footer__nav
                         .footer__nav-title Каталог
