--- a/src/pug/category.pug
+++ b/src/pug/category.pug
@@ -4,7 +4,7 @@ block meta
   - var title = 'Категория каталога (автотовары)';
 
 block wrapper
-    .container.container_wrapper
+    .wrapper
       nav.pathway
         a.pathway__link(href="#") Главная
         a.pathway__current(href="#") Автозапчасти
