--- a/src/pug/sales-item.pug
+++ b/src/pug/sales-item.pug
@@ -4,7 +4,7 @@ block meta
   - var title = 'Страница акции';
 
 block wrapper
-  .container.container_wrapper
+  .wrapper
     nav.pathway
       a.pathway__link(href="#") Главная
       a.pathway__link(href="#") Скидки и акции
