--- a/src/pug/sales.pug
+++ b/src/pug/sales.pug
@@ -4,7 +4,7 @@ block meta
   - var title = 'Скидки и акции';
 
 block wrapper
-    .container.container_wrapper
+    .wrapper
       nav.pathway
         a.pathway__link(href="#") Главная
         a.pathway__current(href="#") #{title}
