--- a/src/pug/subcategory-tires-tile.pug
+++ b/src/pug/subcategory-tires-tile.pug
@@ -9,12 +9,12 @@ block filter
       svg.filter-toggler__icon
         use(xlink:href="#icon-filter")
       span.filter-toggler__title
-        span.filter-toggler__show Показать 
-        span.filter-toggler__hide Скрыть 
+        span.filter-toggler__show Показать
+        span.filter-toggler__hide Скрыть
         | фильтр
 
 block wrapper
-    .container.container_wrapper
+    .wrapper
       nav.pathway
         a.pathway__link(href="#") Главная
         a.pathway__link(href="#") Шины
